Segundo Commit Color al titulo y agregar texto.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/estilos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BOOTSTRAP</title>
@@ -10,6 +11,17 @@
     <div class="img">
         <img src="" alt="">
     </div>
-    <div class="texto">Nuestra perspectiva ante el uso del bootstrap</div>
+    <div class="texto">
+        Nuestra perspectiva ante el uso del bootstrap es que es una herramienta para realizar un desarrollo "rápido", sin embargo, no recomendamos que se use por las siguientes razones: 
+        <strong>Complejidad:</strong> Bootstrap puede ser un framework complejo de aprender, especialmente para principiantes.
+
+        La cantidad de clases y opciones disponibles puede ser abrumadora, y comprender cómo funcionan todas ellas requiere tiempo y esfuerzo.
+        Si solo necesitas funciones básicas de diseño web, Bootstrap podría ser una herramienta demasiado pesada y difícil de manejar.
+        2. Peso: Bootstrap puede agregar peso adicional a tu sitio web, lo que puede afectar negativamente el rendimiento, especialmente en
+        dispositivos móviles o conexiones lentas a internet.
+        
+        Si tu sitio web tiene un público objetivo amplio o estás preocupado por la velocidad de carga, considerar un framework más ligero o un enfoque minimalista podría ser una mejor opción.
+        3. Falta de personalización: Bootstrap ofrece una apariencia y diseño estandarizados, lo que puede limitar tu capacidad para crear un sitio web único y que se destaque. 
+    </div>
 </body>
 </html>
