Se agrega más texto y una imagen

--- a/index.html
+++ b/index.html
@@ -7,21 +7,68 @@
     <title>BOOTSTRAP</title>
 </head>
 <body>
+    <div class="imagen">
+        <img src="images/th.jpg" alt="">
+    </div>
     <h1>Razones para no usar BOOTSTRAP</h1>
     <div class="img">
         <img src="" alt="">
     </div>
     <div class="texto">
-        Nuestra perspectiva ante el uso del bootstrap es que es una herramienta para realizar un desarrollo "rápido", sin embargo, no recomendamos que se use por las siguientes razones: 
-        <strong>Complejidad:</strong> Bootstrap puede ser un framework complejo de aprender, especialmente para principiantes.
 
-        La cantidad de clases y opciones disponibles puede ser abrumadora, y comprender cómo funcionan todas ellas requiere tiempo y esfuerzo.
-        Si solo necesitas funciones básicas de diseño web, Bootstrap podría ser una herramienta demasiado pesada y difícil de manejar.
-        2. Peso: Bootstrap puede agregar peso adicional a tu sitio web, lo que puede afectar negativamente el rendimiento, especialmente en
-        dispositivos móviles o conexiones lentas a internet.
-        
-        Si tu sitio web tiene un público objetivo amplio o estás preocupado por la velocidad de carga, considerar un framework más ligero o un enfoque minimalista podría ser una mejor opción.
-        3. Falta de personalización: Bootstrap ofrece una apariencia y diseño estandarizados, lo que puede limitar tu capacidad para crear un sitio web único y que se destaque. 
+  <p>Si bien Bootstrap es un framework CSS muy popular y útil, existen algunas razones por las que podrías considerar no usarlo:</p>
+
+  <h2>1. Complejidad</h2>
+
+  <ul>
+    <li>Bootstrap puede ser un **framework complejo** de aprender, especialmente para principiantes.</li>
+    <li>La cantidad de clases y opciones disponibles puede ser **abrumadora**, y comprender cómo funcionan todas ellas requiere **tiempo y esfuerzo**.</li>
+    <li>Si solo necesitas **funciones básicas** de diseño web, Bootstrap podría ser una herramienta **demasiado pesada** y difícil de manejar.</li>
+  </ul>
+
+  <h2>2. Peso</h2>
+
+  <ul>
+    <li>Bootstrap puede agregar **peso adicional** a tu sitio web, lo que puede afectar negativamente el **rendimiento**, especialmente en dispositivos móviles o conexiones lentas a internet.</li>
+    <li>Si tu sitio web tiene un **público objetivo amplio** o estás preocupado por la **velocidad de carga**, considerar un framework más ligero o un enfoque minimalista podría ser una mejor opción.</li>
+  </ul>
+
+  <h2>3. Falta de personalización</h2>
+
+  <ul>
+    <li>Bootstrap ofrece una **apariencia y diseño estandarizados**, lo que puede limitar tu capacidad para crear un sitio web **único y que se destaque**.</li>
+    <li>Si necesitas un diseño web **completamente personalizado** o tienes **requisitos específicos de marca**, Bootstrap podría no ser la herramienta más adecuada.</li>
+    <li>En cambio, considerar un enfoque de diseño personalizado o un framework más flexible podría darte **más control** sobre la apariencia de tu sitio web.</li>
+  </ul>
+
+  <h2>4. Dependencia de JavaScript</h2>
+
+  <ul>
+    <li>Bootstrap depende en gran medida de **JavaScript** para funcionar, lo que puede generar problemas de **accesibilidad y compatibilidad**.</li>
+    <li>Si necesitas un sitio web que funcione correctamente para usuarios que no tienen JavaScript habilitado o que utilizan **dispositivos antiguos**, Bootstrap podría no ser la mejor opción.</li>
+    <li>Considerar un framework que no dependa tanto de JavaScript o un enfoque de desarrollo progresivo podría ser una mejor alternativa.</li>
+  </ul>
+
+  <h2>5. Curva de aprendizaje</h2>
+
+  <ul>
+    <li>Si bien Bootstrap ofrece una curva de aprendizaje inicial **rápida**, dominarlo por completo y aprovechar **todas sus funciones** puede llevar **tiempo y experiencia**.</li>
+  </ul>
+
+  <h2>¡Alternativas a Bootstrap!</h2>
+
+  <p>Si las razones mencionadas anteriormente te hacen dudar de usar Bootstrap, existen algunas **alternativas** que puedes considerar:</p>
+
+  <ul>
+    <li>**Tailwind CSS:** Un framework CSS de bajo nivel que ofrece mayor flexibilidad y personalización.</li>
+    <li>**Bulma:** Un framework CSS ligero y minimalista con una curva de aprendizaje sencilla.</li>
+    <li>**Foundation:** Un framework CSS maduro y robusto con una amplia gama de funciones.</li>
+    <li>**CSS Grid y Flexbox:** Soluciones CSS nativas que ofrecen mayor control y flexibilidad para diseños web responsivos.</li>
+  </ul>
+
+  <p>**En definitiva, la decisión de usar o no Bootstrap depende de tus necesidades y preferencias específicas.** Es importante **sopesar las ventajas y desventajas cuidadosamente** antes de tomar una decisión.</p>
+
+  <p>Recuerda que también puedes **combinar diferentes frameworks o enfoques** para crear un sitio web que se adapte perfectamente a tus necesidades.</p>
     </div>
 </body>
 </html>
