--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,59 +17,56 @@
     </div>
     <div class="texto">
 
-  <p>Si bien Bootstrap es un framework CSS muy popular y útil, existen algunas razones por las que podrías considerar no usarlo:</p>
-
-  <h2>1. Complejidad</h2>
-
-  <ul>
-    <li>Bootstrap puede ser un **framework complejo** de aprender, especialmente para principiantes.</li>
-    <li>La cantidad de clases y opciones disponibles puede ser **abrumadora**, y comprender cómo funcionan todas ellas requiere **tiempo y esfuerzo**.</li>
-    <li>Si solo necesitas **funciones básicas** de diseño web, Bootstrap podría ser una herramienta **demasiado pesada** y difícil de manejar.</li>
-  </ul>
-
-  <h2>2. Peso</h2>
-
-  <ul>
-    <li>Bootstrap puede agregar **peso adicional** a tu sitio web, lo que puede afectar negativamente el **rendimiento**, especialmente en dispositivos móviles o conexiones lentas a internet.</li>
-    <li>Si tu sitio web tiene un **público objetivo amplio** o estás preocupado por la **velocidad de carga**, considerar un framework más ligero o un enfoque minimalista podría ser una mejor opción.</li>
-  </ul>
-
-  <h2>3. Falta de personalización</h2>
-
-  <ul>
-    <li>Bootstrap ofrece una **apariencia y diseño estandarizados**, lo que puede limitar tu capacidad para crear un sitio web **único y que se destaque**.</li>
-    <li>Si necesitas un diseño web **completamente personalizado** o tienes **requisitos específicos de marca**, Bootstrap podría no ser la herramienta más adecuada.</li>
-    <li>En cambio, considerar un enfoque de diseño personalizado o un framework más flexible podría darte **más control** sobre la apariencia de tu sitio web.</li>
-  </ul>
-
-  <h2>4. Dependencia de JavaScript</h2>
-
-  <ul>
-    <li>Bootstrap depende en gran medida de **JavaScript** para funcionar, lo que puede generar problemas de **accesibilidad y compatibilidad**.</li>
-    <li>Si necesitas un sitio web que funcione correctamente para usuarios que no tienen JavaScript habilitado o que utilizan **dispositivos antiguos**, Bootstrap podría no ser la mejor opción.</li>
-    <li>Considerar un framework que no dependa tanto de JavaScript o un enfoque de desarrollo progresivo podría ser una mejor alternativa.</li>
-  </ul>
-
-  <h2>5. Curva de aprendizaje</h2>
-
-  <ul>
-    <li>Si bien Bootstrap ofrece una curva de aprendizaje inicial **rápida**, dominarlo por completo y aprovechar **todas sus funciones** puede llevar **tiempo y experiencia**.</li>
-  </ul>
-
-  <h2>¡Alternativas a Bootstrap!</h2>
-
-  <p>Si las razones mencionadas anteriormente te hacen dudar de usar Bootstrap, existen algunas **alternativas** que puedes considerar:</p>
-
-  <ul>
-    <li>**Tailwind CSS:** Un framework CSS de bajo nivel que ofrece mayor flexibilidad y personalización.</li>
-    <li>**Bulma:** Un framework CSS ligero y minimalista con una curva de aprendizaje sencilla.</li>
-    <li>**Foundation:** Un framework CSS maduro y robusto con una amplia gama de funciones.</li>
-    <li>**CSS Grid y Flexbox:** Soluciones CSS nativas que ofrecen mayor control y flexibilidad para diseños web responsivos.</li>
-  </ul>
-
-  <p>**En definitiva, la decisión de usar o no Bootstrap depende de tus necesidades y preferencias específicas.** Es importante **sopesar las ventajas y desventajas cuidadosamente** antes de tomar una decisión.</p>
-
-  <p>Recuerda que también puedes **combinar diferentes frameworks o enfoques** para crear un sitio web que se adapte perfectamente a tus necesidades.</p>
+  
+        <!-- According-->
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Peso
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body"> 
+                  <div class="display-7">
+                    <strong>Peso</strong>
+                    <p>Bootstrap puede agregar **peso adicional** a tu sitio web, lo que puede afectar negativamente el **rendimiento**, especialmente en dispositivos móviles o conexiones lentas a internet.</p>
+                    <p>Si tu sitio web tiene un **público objetivo amplio** o estás preocupado por la **velocidad de carga**, considerar un framework más ligero o un enfoque minimalista podría ser una mejor opción.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Complejidad
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Complejidad</strong> 
+                  <p>Bootstrap puede ser un **framework complejo** de aprender, especialmente para principiantes.</p>
+                  <p>La cantidad de clases y opciones disponibles puede ser **abrumadora**, y comprender cómo funcionan todas ellas requiere **tiempo y esfuerzo**.</p>
+                  <p>Si solo necesitas **funciones básicas** de diseño web, Bootstrap podría ser una herramienta **demasiado pesada** y difícil de manejar.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Curva de aprendizaje
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Dependencia de JavaScript</strong>
+                  <p>Si bien Bootstrap ofrece una curva de aprendizaje inicial **rápida**, dominarlo por completo y aprovechar **todas sus funciones** puede llevar **tiempo y experiencia**</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        <!-- End According-->
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
