--- a/index.html
+++ b/index.html
@@ -1,18 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOOTSTRAP</title>
+    <title>Boostrap ¿Héroe o Villano?</title>
 </head>
 <body>
-    <h1>Razones para no usar BOOTSTRAP</h1>
-    <div class="img">
-        <img src="" alt="">
+<!-- Start Nav -->
+<nav class="navbar navbar-expand-lg" style="background-color: #a5d5f8;">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Boostrap ¿Héroe o Villano?</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Ventajas
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" style="background-color: #dff2ff;" href="#">Ventaja 1</a></li>
+                    <li><a class="dropdown-item" style="background-color: #dff2ff;" href="#">Ventaja 2</a></li>
+                    <li><a class="dropdown-item" style="background-color: #dff2ff;" href="#">Ventaja 3</a></li>
+                    <li><a class="dropdown-item" style="background-color: #dff2ff;" href="#">Ventaja 4</a></li>
+                    <li><a class="dropdown-item" style="background-color: #dff2ff;" href="#">Ventaja 5</a></li>
+                    <li><a class="dropdown-item" style="background-color: #dff2ff;" href="#">Ventaja 6</a></li>
+                </ul>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Desventajas
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" style="background-color: #dff2ff;" href="#">Desventaja 1</a></li>
+                    <li><a class="dropdown-item" style="background-color: #dff2ff;" href="#">Desventaja 2</a></li>
+                    <li><a class="dropdown-item" style="background-color: #dff2ff;" href="#">Desventaja 3</a></li>
+                    <li><a class="dropdown-item" style="background-color: #dff2ff;" href="#">Desventaja 4</a></li>
+                    <li><a class="dropdown-item" style="background-color: #dff2ff;" href="#">Desventaja 5</a></li>
+                    <li><a class="dropdown-item" style="background-color: #dff2ff;" href="#">Desventaja 6</a></li>
+                </ul>
+        </ul>
+        </div>
     </div>
-    <div class="texto">
-        Nuestra perspectiva ante el uso del bootstrap es que es una herramienta para realizar un desarrollo "rápido", sin embargo, no recomendamos que se use por las siguientes razones: 
+    </nav>
+<!-- End Nav -->
+<div class="container">
+    <div class="display-3">Boostrap <strong>¿Héroe o Villano?</strong></div>
+
+    <hr>
+
+    <p class="lead">Nuestra perspectiva ante el uso del bootstrap es que es una herramienta para realizar un desarrollo "rápido", sin embargo, no recomendamos que se use por las siguientes razones: 
         <strong>Complejidad:</strong> Bootstrap puede ser un framework complejo de aprender, especialmente para principiantes.
 
         La cantidad de clases y opciones disponibles puede ser abrumadora, y comprender cómo funcionan todas ellas requiere tiempo y esfuerzo.
@@ -21,7 +62,61 @@
         dispositivos móviles o conexiones lentas a internet.
         
         Si tu sitio web tiene un público objetivo amplio o estás preocupado por la velocidad de carga, considerar un framework más ligero o un enfoque minimalista podría ser una mejor opción.
-        3. Falta de personalización: Bootstrap ofrece una apariencia y diseño estandarizados, lo que puede limitar tu capacidad para crear un sitio web único y que se destaque. 
+        3. Falta de personalización: Bootstrap ofrece una apariencia y diseño estandarizados, lo que puede limitar tu capacidad para crear un sitio web único y que se destaque. </p>
+
+    <hr>
+
+<!-- Start Carousel -->
+<div id="carouselExampleCaptions" class="carousel slide">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
     </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+        <img src="images/1.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+            <h5>Perro feliz</h5>
+            <p>Crea una imagen de un perro que este programando en un computador, sentado en una hamaca en la playa. El perro es un golden retriver. Imagen hiperealista. El perro está feliz.</p>
+        </div>
+        </div>
+        <div class="carousel-item">
+        <img src="images/2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+            <h5>Gato triste</h5>
+            <p>Crea una imagen de un gato que este programando en un computador, sentado en una hamaca en el bosque. El gato es un siamés. Imagen hiperealista. El gato está triste.</p>
+        </div>
+        </div>
+        <div class="carousel-item">
+        <img src="images/3.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+            <h5>Bebé enojado</h5>
+            <p>Crea una imagen de un bebe que este programando en un computador, sentado en una hamaca en un volcan activo. El bebe tiene 1 año de edad. Imagen hiperealista. El bebe esta enojado.</p>
+        </div>
+        </div>
+        <div class="carousel-item">
+        <img src="images/4.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+            <h5>Anciano relajado</h5>
+            <p>Crea una imagen de un anciano que este programando en un computador, sentado en una hamaca en un velero. Imagen hiperealista. El anciano esta extremadamente aburrido.</p>
+        </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+    </div>
+<!-- End carousel -->
+<hr>
+
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
